# mutual-fund-engine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  JIP_MF_Recommendation_Engine_README.md  docker-compose.yml  start.sh
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a3f7c9d12e56_scoring_rethink.py  b5cdfe28e774_initial_schema_all_15_tables.py  c8d2f4a91b73_decision_matrix.py  d4e5f6a7b8c9_add_pulse_tables.py
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/: auth.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  rate_limit.py
backend/app/engines/: __init__.py  base_engine.py  crs_engine.py  fsas_engine.py  matrix_engine.py  qfs_engine.py  qfs_metric_config.py  tier_engine.py
backend/app/jobs/: daily_nav_refresh.py  daily_pulse_refresh.py  fm_signal_trigger.py  monthly_risk_recompute.py  scheduler.py  weekly_master_refresh.py
backend/app/repositories/: audit_repo.py  base.py  benchmark_history_repo.py  benchmark_repo.py  category_returns_repo.py  fsas_repo.py  fund_master_repo.py  fund_performance_repo.py  fund_ranks_repo.py  fund_risk_stats_repo.py  fund_sector_exposure_repo.py  ingestion_log_repo.py  nav_history_repo.py  pulse_snapshot_repo.py  qfs_repo.py  recommendation_repo.py  score_repo.py  sector_signals_repo.py  shortlist_repo.py
backend/app/services/: benchmark_service.py  fsas_scoring.py  ingestion_mappers.py  ingestion_service.py  morningstar_client.py  morningstar_fetcher.py  morningstar_parser.py  (+7 more)
(+120 files in other folders)
