[project]
name = "jip-mf-engine"
version = "1.0.0"
description = "JIP MF Recommendation Engine — Quantitative fund scoring, sector alignment, and composite recommendation system for mutual funds."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "alembic==1.13.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-multipart==0.0.9",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "structlog==24.4.0",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "httpx==0.27.0",
    "apscheduler==3.10.4",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
